--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 
 jobs:
-  build:
+  python:
     docker:
       - image: udata/circleci
       - image: mongo:3.2
@@ -47,10 +47,61 @@ jobs:
       - store_artifacts:
           path: reports/
           destination: reports
+      - persist_to_workspace:
+          root: .
+          paths:
+            - venv
+
+  assets:
+    docker:
+      - image: node:10
+    environment:
+       BASH_ENV: /root/.bashrc
+    steps:
+      - checkout
+      - run:
+          name: Compute JS dependencies key
+          command: cat .nvmrc package.json > js.deps
+      - run:
+          name: Get the base reference branch
+          command: export BASE_BRANCH=$(base_branch)
+      - restore_cache:
+          keys:
+            - js-cache-{{ arch }}-{{ checksum "js.deps" }}
+            - js-cache-{{ arch }}-{{ .Branch }}
+            - js-cache-{{ arch }}-{{ .Environment.BASE_BRANCH }}
+      - run:
+          name: Install NodeJS and dependencies
+          command: npm install
+      - save_cache:
+          key: js-cache-{{ arch }}-{{ checksum "js.deps" }}
+          paths:
+          - node_modules
+      - save_cache:
+          key: js-cache-{{ arch }}-{{ .Branch }}
+          paths:
+          - node_modules
+
+      - persist_to_workspace:
+          root: .
+          paths:
+            - node_modules
+
+  dist:
+    docker:
+      - image: udata/circleci
+    environment:
+       BASH_ENV: /root/.bashrc
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: Build a distributable package
           command: |
             source venv/bin/activate
+            # Check long description renders properly
+            python setup.py check -m -s
             # Build a wheel release
             if [[ $CIRCLE_TAG ]]; then
                 # This is a tagged release
@@ -68,7 +119,6 @@ jobs:
           root: .
           paths:
             - dist
-            - venv
 
   publish:
     docker:
@@ -99,13 +149,24 @@ workflows:
   version: 2
   build:
     jobs:
-      - build:
+      - python:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+      - assets:
+          filters:
+            tags:
+              only: /v[0-9]+(\.[0-9]+)*/
+      - dist:
+          requires:
+            - python
+            - assets
           filters:
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
       - publish:
           requires:
-            - build
+            - dist
           filters:
             branches:
               ignore: /.*/
@@ -114,7 +175,7 @@ workflows:
           context: org-global
       - github:
           requires:
-            - build
+            - dist
           filters:
             branches:
               ignore: /.*/
