--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "dependencies": {
-    "csvapi-front": "0.2.0",
-    "dataexplorer": "0.1.0"
+    "@opendatateam/csvapi-front": "0.2.0",
+    "@opendatateam/dataexplorer": "0.1.0"
   },
   "repository": {
     "type": "git",
