--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,9 @@ version: 2
 jobs:
   python:
     docker:
-      - image: udata/circleci:py3
-      - image: mongo:3.2
-      - image: redis
+      - image: udata/circleci:2-alpine
+      - image: circleci/mongo:3.6-stretch-ram
+      - image: redis:alpine
       - image: udata/elasticsearch:2.4.5
     environment:
        BASH_ENV: /root/.bashrc
@@ -28,6 +28,7 @@ jobs:
           command: |
             virtualenv venv
             source venv/bin/activate
+            pip install -e . || pip install -e .
             pip install -r requirements/develop.pip || pip install -r requirements/develop.pip
       - save_cache:
           key: py-cache-v2-{{ arch }}-{{ checksum "python.deps" }}
@@ -89,7 +90,7 @@ jobs:
 
   dist:
     docker:
-      - image: udata/circleci:py3
+      - image: udata/circleci:2-alpine
     environment:
        BASH_ENV: /root/.bashrc
     steps:
@@ -122,7 +123,7 @@ jobs:
 
   publish:
     docker:
-      - image: udata/circleci:py3
+      - image: udata/circleci:2-alpine
     steps:
       - attach_workspace:
           at: .
@@ -135,7 +136,7 @@ jobs:
 
   github:
     docker:
-      - image: udata/circleci:py3
+      - image: udata/circleci:2-alpine
     environment:
        BASH_ENV: /root/.bashrc
     steps:
