--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@opendatateam/csvapi-front": "0.3.1"
+    "@etalab/csvapi-front": "0.6.0"
   },
   "repository": {
     "type": "git",
