--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "tests"
   },
   "dependencies": {
-    "@opendatateam/csvapi-front": "0.3.1",
-    "@opendatateam/dataexplorer": "0.1.0"
+    "@etalab/csvapi-front": "0.6.3"
   },
   "repository": {
     "type": "git",
