--- a/package.json
+++ b/package.json
@@ -5,27 +5,21 @@
   "directories": {
     "test": "tests"
   },
-  "source": "udata-tabular-preview/index.js",
-  "target": {
-    "browser": {
-      "includeNodeModules": {
-        "vue": false
-      }
-    }
-  },
-  "sideEffects": false,
   "scripts": {
-    "clean": "rimraf .parcel-cache",
-    "build": "npm run clean && parcel build --dist-dir udata_tabular_preview/static/udata-tabular-preview/js/",
-    "prebuild": "npm run clean",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "preversion": "npm run build",
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
-    "@parcel/transformer-vue": "^2.7.0",
-    "parcel": "^2.6.0",
-    "rimraf": "^3.0.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@vitejs/plugin-vue": "^3.2.0",
+    "core-js": "^3.26.0",
     "udata-front": "file:../udata-front/udata-front",
+    "vite": "^3.2.3",
     "vue": "file:../udata-front/node_modules/vue"
   },
   "repository": {
