--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-babel": "^6.0.2",
+    "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "core-js": "^3.26.0",
+    "terser": "^5.15.1",
     "udata-front": "file:../udata-front/udata-front",
     "vite": "^3.2.3",
     "vue": "file:../udata-front/node_modules/vue"
