--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "terser": "^5.15.1",
     "udata-front": "file:../udata-front/udata-front",
     "vite": "^3.2.3",
-    "vue": "file:../udata-front/node_modules/vue"
+    "vue": "^3.2.45"
   },
   "repository": {
     "type": "git",
