--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
+    "@etalab/csvapi-front": "nicolaskempf57/csvapi-front#feat\/extract-csvapi-requests",
     "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "terser": "^5.15.1",
@@ -28,10 +29,6 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/opendatateam/udata-tabular-preview/issues"
-  },
-  "alias": {
-    "udata-front": "../udata-front/udata-front",
-    "vue": "../udata-front/node_modules/vue/dist/vue.esm-bundler.js"
   },
   "browserslist": "> 0.1% in FR, last 15 versions, Firefox ESR, not dead",
   "homepage": "https://github.com/opendatateam/udata-tabular-preview#readme"
