--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "i18n:report": "vue-i18n-extract report",
+    "i18n:extract": "npm run i18n:report -- --add",
     "preview": "vite preview",
     "preversion": "npm run build",
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
-    "@etalab/csvapi-front": "nicolaskempf57/csvapi-front#feat\/extract-csvapi-requests",
+    "@etalab/csvapi-front": "nicolaskempf57/csvapi-front#feat/extract-csvapi-requests",
+    "@intlify/unplugin-vue-i18n": "^0.8.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "terser": "^5.15.1",
     "udata-front": "file:../udata-front/udata-front",
     "vite": "^3.2.3",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-i18n-extract": "^2.0.7"
   },
   "repository": {
     "type": "git",
