--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "tests"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "vite build",
     "i18n:report": "vue-i18n-extract report",
     "i18n:extract": "npm run i18n:report -- --add",
