--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "udata-front": "file:../udata-front/udata-front",
     "vite": "^3.2.3",
     "vue": "^3.2.45",
+    "vue-content-loader": "^2.0.1",
     "vue-i18n": "^9.2.2",
     "vue-i18n-extract": "^2.0.7"
   },
