--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "devDependencies": {
     "@etalab/explore.data.gouv.fr": "^1.0.1-0",
+    "@etalab/udata-front-plugins-helper": "^1.0.1-3",
     "@intlify/unplugin-vue-i18n": "^0.8.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@vitejs/plugin-legacy": "^2.3.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "terser": "^5.15.1",
-    "udata-front": "file:../udata-front/udata-front",
     "vite": "^3.2.3",
     "vue": "^3.2.45",
     "vue-content-loader": "^2.0.1",
