--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,9 +103,6 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          name: Install NodeJS
-          command: nvm install && nvm use
-      - run:
           name: Build a distributable package
           command: |
             source venv/bin/activate
@@ -114,13 +111,13 @@ jobs:
             # Build a wheel release
             if [[ $CIRCLE_TAG ]]; then
                 # This is a tagged release
-                inv dist
+                inv pydist
             elif [[ "$CIRCLE_BRANCH" == feature/* ]]; then
                 # This is a feature branch
-                inv dist -b $CIRCLE_BUILD_NUM+${CIRCLE_BRANCH#*/}
+                inv pydist -b $CIRCLE_BUILD_NUM+${CIRCLE_BRANCH#*/}
             else
                 # This is a simple development build
-                inv dist -b $CIRCLE_BUILD_NUM
+                inv pydist -b $CIRCLE_BUILD_NUM
             fi
       - store_artifacts:
           path: dist
