ci: :green_heart: persist static folder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,6 +92,10 @@ jobs:
           command: |
             nvm use
             npm run build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - udata-tabular-preview/static
 
   dist:
     docker:
