--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
 
   assets:
     docker:
-      - image: node:10
+      - image: udata/circleci:py3
     environment:
        BASH_ENV: /root/.bashrc
     steps:
@@ -73,7 +73,7 @@ jobs:
             - js-cache-{{ arch }}-{{ .Environment.BASE_BRANCH }}
       - run:
           name: Install NodeJS and dependencies
-          command: npm install
+          command: nvm install && npm install
       - save_cache:
           key: js-cache-{{ arch }}-{{ checksum "js.deps" }}
           paths:
@@ -87,6 +87,15 @@ jobs:
           root: .
           paths:
             - node_modules
+      - run:
+          name: Compile assets
+          command: |
+            nvm use
+            npm run build
+      - persist_to_workspace:
+          root: .
+          paths:
+            - udata_tabular_preview/static
 
   dist:
     docker:
@@ -106,13 +115,13 @@ jobs:
             # Build a wheel release
             if [[ $CIRCLE_TAG ]]; then
                 # This is a tagged release
-                inv dist
+                inv pydist
             elif [[ "$CIRCLE_BRANCH" == feature/* ]]; then
                 # This is a feature branch
-                inv dist -b $CIRCLE_BUILD_NUM+${CIRCLE_BRANCH#*/}
+                inv pydist -b $CIRCLE_BUILD_NUM+${CIRCLE_BRANCH#*/}
             else
                 # This is a simple development build
-                inv dist -b $CIRCLE_BUILD_NUM
+                inv pydist -b $CIRCLE_BUILD_NUM
             fi
       - store_artifacts:
           path: dist
