--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
-    "@etalab/explore.data.gouv.fr": "^1.0.1-0",
-    "@etalab/udata-front-plugins-helper": "^1.0.1-3",
+    "@etalab/explore.data.gouv.fr": "^1.0.1",
+    "@etalab/udata-front-plugins-helper": "^1.0.1",
     "@intlify/unplugin-vue-i18n": "^0.8.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@vitejs/plugin-legacy": "^2.3.1",
