Add python translation logic

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,15 @@ python_classes = *Test
 
 [flake8]
 max-line-length = 100
+
+[compile_catalog]
+domain = udata_tabular_preview
+directory = udata_tabular_preview/translations
+statistics = true
+
+[extract_messages]
+keywords = _ N_:1,2 P_:1c,2 L_ gettext ngettext:1,2 pgettext:1c,2 npgettext:1c,2,3 lazy_gettext lazy_pgettext:1c,2
+mapping_file = babel.cfg
+add_comments = TRANSLATORS:
+output_file = udata_tabular_preview/translations/udata_tabular_preview.pot
+width = 80
