fix: :bug: fix i18n

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,3 +21,15 @@ mapping_file = babel.cfg
 add_comments = TRANSLATORS:
 output_file = udata_tabular_preview/translations/udata_tabular_preview.pot
 width = 80
+
+[init_catalog]
+domain = udata_tabular_preview
+input_file = udata_tabular_preview/translations/udata_tabular_preview.pot
+output_dir = udata_tabular_preview/translations
+
+[update_catalog]
+domain = udata_tabular_preview
+input_file = udata_tabular_preview/translations/udata_tabular_preview.pot
+output_dir = udata_tabular_preview/translations
+ignore_obsolete = true
+previous = true
