--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postversion": "git push --follow-tags"
   },
   "devDependencies": {
+    "@etalab/data.gouv.fr-components": "^1.13.7",
     "@etalab/udata-front-plugins-helper": "^1.1.0",
     "@intlify/unplugin-vue-i18n": "^0.8.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
