Publish .dev version on pypi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,7 +168,8 @@ workflows:
             - dist
           filters:
             branches:
-              ignore: /.*/
+              only:
+                - master
             tags:
               only: /v[0-9]+(\.[0-9]+)*/
           context: org-global
